[25612] jsparrow ch.elexis.core.ui